# beatrizuezu.github.io

./: README.md  _config.yml  about.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml  style.css  utils-links.md
.sass-cache/367d2e39947c9e78960acd07a063d6f547a74142/: author.sassc  disqus.sassc  footer.sassc  header.sassc  nav.sassc  others.sassc  pagination.sassc  related.sassc  share.sassc  side-by-side.sassc  social-links.sassc  spoiler.sassc
.sass-cache/468c15dd92ef91761382b38e07bd845b640d5cc0/: home-blog-projects.sassc  page.sassc  (+2 more)
_includes/: analytics-google.html  footer.html
_layouts/: default.html
_posts/: 2016-02-24-markdown-common-elements.markdown  2018-02-11-teste.md  2018-03-16-pyladies-e-django-girls-do-medo-ao-incentivo.md  2019-02-26-visualizando-query-sql-a-partir-do-orm-django.md  2019-09-22-configurando-atom.md  2019-09-28-entendendo-map-filter-reduce-lambda.md  2019-09-29-entendendo-map-filter-reduce-lambda.md  2019-11-06-nomes-significativos.md  2020-11-20-design-patterns.md  2020-11-23-docker-cola.md  2021-04-01-funcoes-escopo-kotlin.md  2021-04-17-solid.md  2021-05-20-twelve-factor-app.md  2021-08-31-work-out-process.md  2021-10-05-kubernetes-notes.md  2021-10-09-kubernetes-notes-part-1.md  2021-10-09-solid.md  2021-11-07-kubernetes-notes-part-2.md  2021-12-11-en-design-patterns-serie.md  2022-01-29-elasticsearch-notes-part1.md  2022-02-13-elasticsearch-notes-part2.md  summary.md
_site/: feed.xml  index.html
old/: cheat-sheet-k8s  index.html
output/: archives.html  authors.html  categories.html  index.html  tags.html
(+50 files in other folders)
